<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingStart="10dp"
    android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/imgMovie"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/imgMovie"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/year"/>

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/txtYear"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/genre"/>

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtYear"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/imgMovie"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description"/>

</RelativeLayout>